# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

import("//build/ohos_var.gni")
import("//build/test.gni")
import("../../ffrt.gni")

module_output_path = "ffrt/ffrt"

gtest_public_external_deps = [ "googletest:gtest_main" ]

ffrt_ut_base_cflags_cc = [
  "-frtti",
  "-Xclang",
  "-fcxx-exceptions",
  "-std=c++11",
  "-DFFRT_PERF_EVENT_ENABLE",
  "-DFFRT_WORKER_MONITOR",
  "-DFFRT_BBOX_ENABLE",
]

ffrt_ut_base_deps = [ "../..:libffrt" ]

ffrt_ut_base_external_deps = [
  "bounds_checking_function:libsec_shared",
  "c_utils:utils",
  "faultloggerd:libbacktrace_local",
  "faultloggerd:libdfx_dumpcatcher",
  "faultloggerd:libfaultloggerd",
  "faultloggerd:libunwinder",
  "faultloggerd:libasync_stack",
  "googletest:gtest",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
]

ffrt_ut_base_sources = [
  "../../src/core/entity.cpp",
  "../../src/core/task.cpp",
  "../../src/core/task_io.cpp",
  "../../src/core/loop_api.cpp",
  "../../src/core/poller_api.cpp",
  "../../src/core/timer_api.cpp",
  "../../src/core/version_ctx.cpp",
  "../../src/dfx/bbox/bbox.cpp",
  "../../src/dfx/bbox/fault_logger_fd_manager.cpp",
  "../../src/dfx/dump/dump.cpp",
  "../../src/dfx/log/ffrt_log.cpp",
  "../../src/dfx/sysevent/sysevent.cpp",
  "../../src/dfx/trace/ffrt_trace.cpp",
  "../../src/dfx/trace/ffrt_trace_chain.cpp",
  "../../src/dfx/trace_record/ffrt_trace_record.cpp",
  "../../src/dfx/watchdog/watchdog_util.cpp",
  "../../src/dfx/async_stack/ffrt_async_stack.cpp",
  "../../src/dm/dependence_manager.cpp",
  "../../src/dm/sdependence_manager.cpp",
  "../../src/eu/co2_context.c",
  "../../src/eu/co_routine.cpp",
  "../../src/eu/co_routine_factory.cpp",
  "../../src/eu/worker_thread.cpp",
  "../../src/eu/cpu_worker.cpp",
  "../../src/eu/execute_unit.cpp",
  "../../src/eu/base_poller.cpp",
  "../../src/eu/io_poller.cpp",
  "../../src/eu/loop_poller.cpp",
  "../../src/eu/loop.cpp",
  "../../src/eu/osattr_manager.cpp",
  "../../src/eu/qos_convert.cpp",
  "../../src/eu/qos_interface.cpp",
  "../../src/eu/rtg_ioctl.cpp",
  "../../src/eu/rtg_perf_ctrl.cpp",
  "../../src/eu/sexecute_unit.cpp",
  "../../src/ipc/ipc.cpp",
  "../../src/queue/queue_monitor.cpp",
  "../../src/queue/queue_handler.cpp",
  "../../src/queue/base_queue.cpp",
  "../../src/queue/serial_queue.cpp",
  "../../src/queue/concurrent_queue.cpp",
  "../../src/queue/eventhandler_interactive_queue.cpp",
  "../../src/queue/eventhandler_adapter_queue.cpp",
  "../../src/queue/queue_api.cpp",
  "../../src/queue/traffic_record.cpp",
  "../../src/sched/deadline.cpp",
  "../../src/sched/execute_ctx.cpp",
  "../../src/sched/frame_interval.cpp",
  "../../src/sched/interval.cpp",
  "../../src/sched/load_tracking.cpp",
  "../../src/sched/multi_workgroup.cpp",
  "../../src/sched/qos.cpp",
  "../../src/sched/sched_deadline.cpp",
  "../../src/sched/scheduler.cpp",
  "../../src/sched/task_scheduler.cpp",
  "../../src/sched/stask_scheduler.cpp",
  "../../src/sync/condition_variable.cpp",
  "../../src/sync/delayed_worker.cpp",
  "../../src/sync/timer_manager.cpp",
  "../../src/sync/mutex.cpp",
  "../../src/sync/shared_mutex.cpp",
  "../../src/sync/perf_counter.cpp",
  "../../src/sync/sleep.cpp",
  "../../src/sync/sync.cpp",
  "../../src/sync/thread.cpp",
  "../../src/sync/wait_queue.cpp",
  "../../src/tm/task_base.cpp",
  "../../src/tm/cpu_task.cpp",
  "../../src/tm/scpu_task.cpp",
  "../../src/tm/queue_task.cpp",
  "../../src/tm/io_task.cpp",
  "../../src/tm/uv_task.cpp",
  "../../src/tm/task_factory.cpp",
  "../../src/util/capability.cpp",
  "../../src/util/cpu_boost_wrapper.cpp",
  "../../src/util/ffrt_cpu_boost.cpp",
  "../../src/util/ffrt_facade.cpp",
  "../../src/util/graph_check.cpp",
  "../../src/util/init.cpp",
  "../../src/util/spmc_queue.cpp",
  "../../src/util/time_format.cpp",
  "../../src/util/white_list.cpp",
  "../../src/util/worker_monitor.cpp",
]

config("ffrt_test_config") {
  include_dirs = [
    "../../interfaces/kits",
    "../../interfaces/inner_api",
    "../../src",
    "../../src/dfx/async_stack",
    "../../src/dfx/log",
    "../../src/dfx/trace",
    "../../src/dfx/trace_record",
    "../../src/sched",
    "../../include/sched",
    "../../include",
  ]

  cflags = [
    "-fno-rtti",
    "-Wno-unused-variable",
    "-Wno-unused-function",
  ]

  defines = [
    "QOS_INTERVAL",
    "QOS_DISPATCH",
    "QOS_RTG",
    "QOS_MULTI_RTG",
    "QOS_RTG_RT",
    "QOS_CHECKPOINT",
    "QOS_SUBMIT",
    "QOS_DEMO",
    "ATRACE_MODE=0",  # 0 is off, 5 is bytrace, 6 is pmu
    "ATRACE_LEVEL=0",
    "ATRACE_LOGI_ENABLE=0",
    "ATRACE_LOGD_ENABLE=0",
    "ATRACE_SCOPE_LOG_ENABLE=0",
    "ATRACE_DURATION_LOG_ENABLE=0",
    "FFRT_RELEASE",
    "DISABLE_MONITOR",
    "FFRT_ENABLE_HITRACE_CHAIN",
    "FFRT_GITEE",
    "FFRT_PTHREAD_ENABLE",
    "FFRT_OH_WATCHDOG_ENABLE",
    "QOS_WORKER_FRAME_RTG",
    "USE_OHOS_QOS",
    "OHOS_STANDARD_SYSTEM",
    "TASKSTAT_LOG_ENABLE=0",
  ]
  if (use_musl) {
    defines += [ "TDD_MUSL" ]
  }
  if (ffrt_async_stack_enable) {
    defines += [ "FFRT_ASYNC_STACKTRACE" ]
  }
  if (target_cpu == "arm") {
    defines += [ "APP_USE_ARM" ]
  }
}

ohos_unittest("frame_interval_test") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "frame_interval_test.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("deadline_test") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "deadline_test.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("task_ctx_test") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "task_ctx_test.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_coroutine") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_coroutine.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_cpu_worker") {
  module_out_path = module_output_path
  cflags_cc = []
  deps = []
  external_deps = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = ["../testfunc"]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [
      "testcase/ut_cpu_worker.cpp",
  ]
  sources += ffrt_ut_base_sources
  deps += ffrt_ut_base_deps
  external_deps += ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("inherit_test") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/inherit_test.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("multi_workgroup_test") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "multi_workgroup_test.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("qos_convert_test") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "qos_convert_test.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  part_name = "ffrt"
}

ohos_unittest("qos_interface_test") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "qos_interface_test.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_cgroup_qos") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc
  cflags_cc += [ "-DWITH_NO_MOCKER" ]

  sources = [ "testcase/ut_cgroup_qos.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_condition") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_condition.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_core") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_core.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_csync") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_csync.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_deadline") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_deadline.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_dependency") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_dependency.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_execute_unit") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_execute_unit.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_ffrt_io") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [
    "testcase/ut_ffrt_io.cpp",
    "testcase/ut_poller.cpp",
  ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_graphCheck") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_graphCheck.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_interval") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_interval.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_whitelist") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = ["../testfunc"]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [
    "testcase/ut_whitelist.cpp",
  ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_loop") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc
  cflags_cc += [ "-DWITH_NO_MOCKER" ]

  sources = [ "testcase/ut_loop.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = []
  external_deps += ffrt_ut_base_external_deps
  external_deps += [ "googletest:gmock" ]

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_queue") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_queue.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_rtg") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_rtg.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_scheduler") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_scheduler.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_thread") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_thread.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_mem") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc
  cflags_cc += [ "-DUSE_GTEST" ]

  sources = [
    "../testfunc/func_pool.cpp",
    "../testfunc/util.cpp",
    "testcase/ut_mem.cpp",
  ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_queue_dump") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_queue_dump.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_dump") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_dump.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_qos_convert") {
  module_out_path = module_output_path
  cflags_cc = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [
    "../testfunc",
    "../../include/sched",
  ]

  cflags_cc += ffrt_ut_base_cflags_cc

  sources = [ "testcase/ut_qos_convert.cpp" ]
  sources += ffrt_ut_base_sources
  deps = ffrt_ut_base_deps
  external_deps = ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

ohos_unittest("ut_cpu_boost") {
  module_out_path = module_output_path
  configs = []
  include_dirs = []
  cflags_cc = []
  deps = []
  external_deps = []

  configs = [ ":ffrt_test_config" ]
  include_dirs = [ "../testfunc" ]

  cflags_cc += ffrt_ut_base_cflags_cc
  cflags_cc += [ "-DWITH_NO_MOCKER" ]

  sources = [ "testcase/ut_cpu_boost.cpp" ]
  sources += ffrt_ut_base_sources
  deps += ffrt_ut_base_deps
  external_deps += ffrt_ut_base_external_deps

  if (is_standard_system) {
    public_external_deps = gtest_public_external_deps
  }

  install_enable = true
  part_name = "ffrt"
}

group("ffrt_unittest_ffrt") {
  testonly = true

  deps = []
  if (!is_asan) {
    deps += [
      ":deadline_test",
      ":frame_interval_test",
      ":inherit_test",
      ":multi_workgroup_test",
      ":qos_convert_test",
      ":qos_interface_test",
      ":task_ctx_test",
      ":ut_cgroup_qos",
      ":ut_condition",
      ":ut_core",
      ":ut_coroutine",
      ":ut_cpu_boost",
      ":ut_csync",
      ":ut_deadline",
      ":ut_dependency",
      ":ut_dump",
      ":ut_execute_unit",
      ":ut_ffrt_io",
      ":ut_graphCheck",
      ":ut_interval",
      ":ut_loop",
      ":ut_mem",
      ":ut_qos_convert",
      ":ut_queue",
      ":ut_queue_dump",
      ":ut_rtg",
      ":ut_scheduler",
      ":ut_whitelist",
    ]
  }
}
